# depositor-bot

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secretlintrc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Pipfile  README.md  brownie-config.yml  docker-compose.devnet.yml  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  prometheus.yml  pyproject.toml  requirements.txt  sample.env  sync-abi.py  top-up.py
.github/: dispatch_workflow.py
.github/workflows/: .pre-commit-config.yaml  checks.yml  ci-dev-goerli.yml  ci-dev-holesky.yml  ci-dev.yml  ci-prod.yml  ci-staging.yml  integration-tests.yml  prepare-release.yml  secretlint-test.yaml  tests-and-checks.yml  tests.yml  tests_and_checks.yml
alerts/: alerts.yml  depositor-bot.rules.yml  depositor-bot.tests.yml
interfaces/: DataBusContract.json  DepositSecurityModule.json  DepositSecurityModuleV2.json  ERC20.json  ICMV2.json  Lido.json  NodeOperatorRegistry.json  Proxy.json  SimpleDVTStakingStrategy.json  StMATIC.json  StakingModule.json  StakingRouterV3.json  StakingRouterV4.json  TopUpGateway.json  ValidatorShare.json
scripts/: README.md  collect_bc_deposits.py  depositor.py  pauser.py  test_relay_signature.py  utils.py
scripts/depositor_utils/: constants.py  deposit_problems.py  depositor_bot.py  exceptions.py  gas_strategy.py  kafka.py  logger.py  loki.py  prometheus.py  utils.py  variables.py
scripts/flashbots/: __init__.py  flashbots.py  middleware.py  provider.py
scripts/pauser_utils/: kafka.py  pause_bot.py
scripts/utils/: constants.py  exceptions.py  fetch_latest_block.py  gas_strategy.py  healthcheck_pulse.py  interfaces.py  kafka.py  metrics.py  metrics_collector_middleware.py  requests_metric_middleware.py  variables.py
src/: depositor.py  main.py  pauser.py  types.py  unvetter.py  variables.py
src/blockchain/: buffered_eth.py  constants.py  contracts.py  executer.py  executor.py  fetch_latest_block.py  gas_strategy.py  requests_metric_middleware.py  typings.py
src/bots/: depositor.py  depositor_bot.py  pause.py  pause_bot.py  pauser.py  unvetter.py
src/cryptography/: verify_signature.py
src/metrics/: healthcheck_pulse.py  logging.py  metrics.py  transport_message_metrics.py
src/providers/: consensus.py  consistency.py  fallback_provider.py  http_provider.py  keys_api.py
src/transport/: msg_schemas.py  msg_storage.py  types.py
src/utils/: bytes.py  timeout.py
strategy/: gas_strategy.py
tests/: conftest.py  fork.py  test_depositor_bot.py  test_gas_srategy.py  test_pause_bot.py  test_reccomended_buffered_eth.py
tests/blockchain/: test_beacon_state_proofs.py  test_cmv2_strategy.py  test_merkle_tree.py  test_topup_proofs.py
tests/bots/: test_depositor.py  test_executor.py  test_mellow.py  test_pauser.py  test_timeout.py  test_topup_proof_benchmark.py  test_unvetter.py
tests/cryptography/: test_verify_signature.py
tests/factories/: model_factory.py  staking_module.py
tests/fixtures/: __init__.py  common_fixtures.py  contracts.py  depositor_fixtures.py  gas_fee_fixtures.py  pause_bot_fixtures.py  provider.py  pytest_fixtures.py  pytest_mocks.py  signature_fixtures.py  strategy.py  top_up_proof_fixtures.py
tests/providers/: test_consensus.py  test_consistency.py  (+2 more)
tests_old/: test_gas_srategy.py  test_reccomended_buffered_eth.py  test_signature_check.py
(+102 files in other folders)
