[tool.poetry]
name = "depositor-bot"
version = "4.2.1"
description = "Bot that collects council signatures, checks blockchain state and signatures and do deposits. Also pause bot send pause tx if there is security warning."
authors = ["Raman <raman.s@lido.fi>"]
license = "MIT License"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.26.4"
prometheus-client = "0.20.0"
web3-multi-provider = "^0.6.0"
schema = "^0.7.5"
websocket-client = "^1.4.1"
confluent-kafka = "^2.2.0"
web3 = "^6.10.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "tests",
]
markers = [
    "unit",  # offline
    "integration",  # hardhat fork
]
