[tool.poetry]
name = "depositor-bot"
version = "5.0.0"
description = "Bot that collects council signatures, checks blockchain state and signatures and do deposits. Also pause bot send pause tx if there is security warning."
authors = ["Raman <raman.s@lido.fi>"]
license = "MIT License"
readme = "README.md"
include = [
    "LICENSE",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
numpy = "^2.1.2"
prometheus-client = "^0.21.0"
schema = "^0.7.5"
websocket-client = "^1.4.1"
web3 = "^7.4.0"
web3-multi-provider = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pyright = "^1.1.362"
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
markers = [
    "unit", # offline
    "integration", # hardhat fork
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["src"]
